--- a/index.html
+++ b/index.html
@@ -3,136 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo Sustentable</title>
+    <title>Inciar Sesión</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+
 </head>
-<body>  
-
+<body>
     <!--
-        navbar
+        Login
     -->
-    <nav class="navbar vanbar-expad-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Turismo Sustentable</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sesion.html">Funcionarios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="reserva.php">Reservas</a>
-              </li>
-            </ul>
-          </div>
-    </nav>
-    <br>
-    <!--
-        Carrusel
-    -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imagenes/cartel.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/Isla-Damas1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/bote.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-      <br>
-      <!--
-          fin carrusel
-      -->
-      <div class="container">
-        <div>
-            <h1>Informaciones</h1>
-            <br>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Eveniet iusto quod
-                 accusamus necessitatibus repudiandae natus laborum 
-                 aliquam tenetur incidunt totam, excepturi beatae 
-                 corrupti! Harum cupiditate aut nemo quod officiis 
-                 sed.
-              </p>
-              <br>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Eveniet iusto quod
-                 accusamus necessitatibus repudiandae natus laborum 
-                 aliquam tenetur incidunt totam, excepturi beatae 
-                 corrupti! Harum cupiditate aut nemo quod officiis 
-                 sed.
-              </p>
-              <br>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Eveniet iusto quod
-                 accusamus necessitatibus repudiandae natus laborum 
-                 aliquam tenetur incidunt totam, excepturi beatae 
-                 corrupti! Harum cupiditate aut nemo quod officiis 
-                 sed.
-              </p>
-
-        </div>
-      </div>
-      
-      <!--
-          footer
-        -->
-      <footer class="page-footer bg-dark">
-        <div class="bg-success">
-            <div class="container">
-                <div class="row py-4 d-flex align-items-center">
-                    <div class="col-md-12 text-center text-white">
-                        <a href="#"><i class="fab fa-facebook-f mr-4"></i></a>
-                        <a href="#"><i class="fab fa-instagram mr-4"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp mr-4"></i></a>
-                        <a href="#"><i class="fab fa-twitter mr-4"></i></a>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="card col-sm-12 col-md-8 col-lg-6 "><br>
+                <div class="card-header bg-dark text-white">Inicio de Sesión</div>
+                <div class="card-body">
+                    <form action="principal.html" method="POST">
+                        <div class="form-grup">
+                            <label for="user">Usuario:</label>
+                            <input class="form-control" type="text" name="user" id="user">
+                        </div>
+                        <div class="form-grup">
+                            <label for="pass">Contraseña:</label>
+                            <input class="form-control" type="password" name="pass" id="pass">
+                        </div>
+                        <br>        
+                        <div> 
+                            <input class="btn btn-success btn-block" type="submit" value="Iniciar" name="boton">
+                        </div>
+                    </form>    
+                </div>
+                <div class="card-footer bg-light">
+                    <a href="registro.html">Registrar un nuevo Usuario</a>
                 </div>
             </div>
         </div>
-      </footer>
+    </div>
 
 
-
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-</body>
-</html>
