--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="card col-sm-12 col-md-8 col-lg-6 "><br>
                 <div class="card-header bg-dark text-white">Inicio de Sesión</div>
                 <div class="card-body">
-                    <form action="principal.html" method="POST">
+                    <form action="/recursos/funciones/login.php" method="POST">
                         <div class="form-grup">
                             <label for="user">Usuario:</label>
                             <input class="form-control" type="text" name="user" id="user">
