--- a/principal.html
+++ b/principal.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="sesion.html">Registro Personas <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="inicio.php">Funcionarios</a>
@@ -42,7 +42,7 @@
     <!--
         Carrusel
     -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" img-fluid>
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -53,10 +53,10 @@
             <img src="imagenes/cartel.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/Isla-Damas1.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/Isla-Damas1.jpg" class="img-fluid" alt="Responsive image">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/bote.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/bote.jpg" class="img-fluid" alt="Responsive image">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
