sin conexion con bd

--- a/principal.html
+++ b/principal.html
@@ -37,6 +37,9 @@
               </li>
             </ul>
           </div>
+
+    <a class="navbar-brand" href="#">Bienvenido ></a>
+    <a class="navbar-brand" href="#">Cerrar Sesion</a>      
     </nav>
     <br>
     <!--
