--- a/principal.html
+++ b/principal.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="sesion.html">Registro Personas <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="usuarios.php">Usuarios <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="inicio.php">Funcionarios</a>
@@ -35,11 +35,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="reserva.php">Reservas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="reserva.php">Cerrar Sesión</a>
+              </li>
             </ul>
-          </div>
-
-    <a class="navbar-brand" href="#">Bienvenido ></a>
-    <a class="navbar-brand" href="#">Cerrar Sesion</a>      
+          </div>    
     </nav>
     <br>
     <!--
