mantenedor de usuarios

--- a/principal.html
+++ b/principal.html
@@ -20,7 +20,7 @@
         navbar
     -->
     <nav class="navbar vanbar-expad-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Turismo Sustentable</a>
+        <a class="navbar-brand" href="principal.html">Turismo Sustentable</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
